# mesa

./: CLAUDE.md  meson.build  meson.options
.github/: panvk-kbase-release-notes.md
.github/workflows/: deqp-vk-aarch64.yml  kbase-debug.yml  kbase-release.yml  pixel7-kbase-debug.yml  pixel7-kbase-release-deb.yml
docs/: index.rst  kbase-dvfs.md  kbase-triangle-hang-analysis.md  panvk-kbase.md
include/drm-uapi/: mali_kbase_ioctl.h
src/gallium/auxiliary/pipe-loader/: meson.build  pipe_loader.c  pipe_loader.h  pipe_loader_drm.c
src/gallium/auxiliary/target-helpers/: drm_helper.h  drm_helper_public.h
src/gallium/drivers/panfrost/: pan_bo.c  pan_device.c  pan_device.h
src/gallium/targets/dril/: dril_target.c
src/panfrost/compiler/: pan_nir_lower_xfb.c
src/panfrost/lib/kmod/: kbase_kmod.c  kbase_kmod.h  meson.build  pan_kmod.c  pan_kmod.h
src/panfrost/model/: pan_model.c  pan_model.h
src/panfrost/vulkan/: meson.build  panvk_cmd_draw.h  panvk_cmd_push_constant.h  panvk_device.h  panvk_device_memory.c  panvk_host_copy.c  panvk_instance.c  panvk_physical_device.c  panvk_physical_device.h  panvk_priv_bo.c  panvk_shader.h  panvk_vX_cmd_push_constant.c  panvk_vX_device.c  panvk_vX_physical_device.c  panvk_vX_shader.c  panvk_wsi.c
src/panfrost/vulkan/csf/: panvk_cmd_buffer.h  panvk_queue.h  panvk_vX_cmd_buffer.c  panvk_vX_cmd_dispatch.c  panvk_vX_cmd_draw.c  panvk_vX_cmd_precomp.c  panvk_vX_cmd_xfb.c  panvk_vX_exception_handler.c  panvk_vX_gpu_queue.c  (+1 more)
src/vulkan/wsi/: wsi_common.c  wsi_common.h  wsi_common_x11.c
tools/: panvk-gpu-performance
(+2 files in other folders)
